--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -1,10 +1,10 @@
 @inproceedings{ma2013algorithm,
-  title={An algorithm based on the GM (1, 1) model on increasing oil production of measures operation for a single well},
-  author={Ma, Xin and Ding, Xian-Feng and Luo, Di and Zhou, Jun-Jie},
-  booktitle={IEEE International Conference on Grey Systems and Intelligent Services},
-  pages={158--160},
-  year={2013},
-  organization={IEEE}
+  title="An algorithm based on the GM (1, 1) model on increasing oil production of measures operation for a single well",
+  author="Ma, Xin and Ding, Xian-Feng and Luo, Di and Zhou, Jun-Jie",
+  booktitle="IEEE International Conference on Grey Systems and Intelligent Services",
+  pages="158--160",
+  year="2013",
+  organization="IEEE"
 }
 
 @article{ma2013online,
