--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -4,7 +4,7 @@
   booktitle="IEEE International Conference on Grey Systems and Intelligent Services",
   pages="158--160",
   year="2013",
-  organization="IEEE"
+  organization="IEEE"  
 }
 
 @article{ma2013online,
@@ -608,7 +608,8 @@
   title={Carbon dioxide transport via pipelines: A systematic review},
   author={Lu, Hongfang and Ma, Xin and Huang, Kun and Fu, Lingdi and Azimi, Mohammadamin},
   journal={Journal of Cleaner Production},
-  pages={121994},
+  article_number={121994},
   year={2020},
   publisher={Elsevier}
+  
 }
