--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -608,7 +608,7 @@
   title={Carbon dioxide transport via pipelines: A systematic review},
   author={Lu, Hongfang and Ma, Xin and Huang, Kun and Fu, Lingdi and Azimi, Mohammadamin},
   journal={Journal of Cleaner Production},
-  article_number={121994},
+  note={121994},
   year={2020},
   publisher={Elsevier}
   
