--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -613,3 +613,33 @@
   publisher={Elsevier}
   
 }
+
+@article{feng2020asymptotically,
+  title={Asymptotically almost periodic solutions for certain differential equations with piecewise constant arguments},
+  author={Feng, Zonghong and Wang, Yong and Ma, Xin},
+  journal={Advances in Difference Equations},
+  volume={2020},
+  number={1},
+  pages={1--22},
+  year={2020},
+  publisher={SpringerOpen}
+}
+
+@article{ma2020low,
+  title={Low carbon roadmap of residential building sector in China: Historical mitigation and prospective peak},
+  author={Ma, Minda and Ma, Xin and Cai, Wei and Cai, Weiguang},
+  journal={Applied Energy},
+  volume={273},
+  pages={115247},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{wu2020predicting,
+  title={Predicting China’s energy consumption using a novel grey Riccati model},
+  author={Wu, Wenqing and Ma, Xin and Wang, Yong and Cai, Wei and Zeng, Bo},
+  journal={Applied Soft Computing},
+  pages={106555},
+  year={2020},
+  publisher={Elsevier}
+}
