--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -643,3 +643,14 @@
   year={2020},
   publisher={Elsevier}
 }
+
+@article{hu2020forecasting,
+  title={Forecasting manufacturing industrial natural gas consumption of China using a novel time-delayed fractional grey model with multiple fractional order},
+  author={Hu, Yu and Ma, Xin and Li, Wanpeng and Wu, Wenqing and Tu, Daoxing},
+  journal={Computational and Applied Mathematics},
+  volume={39},
+  number={4},
+  pages={1--30},
+  year={2020},
+  publisher={Springer}
+}
