--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -1,71 +1,3 @@
-@inproceedings{ma2013algorithm,
-  title="An algorithm based on the GM (1, 1) model on increasing oil production of measures operation for a single well",
-  author="Ma, Xin and Ding, Xian-Feng and Luo, Di and Zhou, Jun-Jie",
-  booktitle="IEEE International Conference on Grey Systems and Intelligent Services",
-  pages="158--160",
-  year="2013",
-  organization="IEEE"  
-}
-
-@article{ma2013online,
-  title={The Online Administration System of the Downhole Designing Documents},
-  author={Ma, Xin and Tang, Liang},
-  year={2013},
-  publisher={Journal of Chongqing University of Science and Tec}
-}
-
-@article{luo2014research,
-  title={Research on the Improved Gray Prediction Model for Coal Production Based on Gauss-Legendre Formula},
-  author={Luo, Di and Ma, Xin},
-  journal={Coal Engineering},
-  volume={46},
-  number={04},
-  pages={90--92},
-  year={2014}
-}
-
-@article{ma2014optimizing,
-  title={Optimizing the Grey GM (1, N) Model by Rebuilding All the Back Ground Values},
-  author={Ma, Xin and Liu, Zhibin and Chen, Yishen},
-  journal={Journal of Systems Science and Information},
-  volume={2},
-  number={6},
-  pages={543--552},
-  year={2014}
-}
-
-@article{ma2015predicting,
-  title={Predicting the oil field production using the novel discrete GM (1, N) model.},
-  author={Ma, Xin and Liu, Zhibin},
-  journal={Journal of Grey System},
-  volume={27},
-  number={4},
-  pages={63--73},
-  year={2015}
-}
-
-@article{ma2016predicting,
-  title={Predicting the cumulative oil field production using the novel grey ENGM model},
-  author={Ma, Xin and Liu, Zhibin},
-  journal={Journal of Computational and Theoretical Nanoscience},
-  volume={13},
-  number={1},
-  pages={89--95},
-  year={2016},
-  publisher={American Scientific Publishers}
-}
-
-@article{ma2016novel,
-  title={A novel kernel regularized nonlinear GMC (1, n) model and its application},
-  author={Ma, Xin and Liu, Zhibin and Wei, Yong and Kong, Xinhai},
-  journal={Journal of Grey System},
-  volume={28},
-  number={3},
-  pages={97},
-  year={2016},
-  publisher={Research Information Ltd.}
-}
-
 @article{ma2017novel,
   title={A novel kernel regularized nonhomogeneous grey model and its applications},
   author={Ma, Xin and Hu, Yi-sheng and Liu, Zhi-bin},
@@ -74,16 +6,6 @@
   pages={51--62},
   year={2017},
   publisher={Elsevier}
-}
-
-@article{ma2016research,
-  title={Research on a Novel Kernel Based Grey Prediction Model and Its Applications},
-  author={Ma, Xin},
-  journal={Mathematical Problems in Engineering},
-  volume={2016},
-  pages={1--9},
-  year={2016},
-  publisher={Hindawi}
 }
 
 @article{ma2017application,
@@ -114,17 +36,6 @@
   pages={217--238},
   year={2018},
   publisher={Elsevier}
-}
-
-@article{kong2018comparison,
-  title={Comparison study on the nonlinear parameter optimization of Nonlinear Grey Bernoulli Model NGBM (1, 1) between intelligent optimizers},
-  author={Kong, Lingcun and Ma, Xin},
-  journal={Grey Systems: Theory and Application},
-  volume={8},
-  number={2},
-  pages={210--226},
-  year={2018},
-  publisher={Emerald Publishing Limited}
 }
 
 @article{ma2018predicting,
@@ -170,49 +81,6 @@
   publisher={World Scientific}
 }
 
-@article{hu20173d,
-  title={3D graphene-encapsulated Li3V2 (PO4) 3 microspheres as a high-performance cathode material for energy storage},
-  author={Hu, Yisheng and Ma, Xin and Guo, Ping and Jaeger, Frederike and Wang, Zhouhua},
-  journal={Journal of Alloys and Compounds},
-  volume={723},
-  pages={873--879},
-  year={2017},
-  publisher={Elsevier}
-}
-
-@article{hu2017design,
-  title={Design of NaTi2 (PO4) 3 nanocrystals embedded in N-doped graphene sheets for sodium-ion battery anode with superior electrochemical performance},
-  author={Hu, Yisheng and Ma, Xin and Guo, Ping and Jaeger, Frederike and Wang, Zhouhua},
-  journal={Ceramics International},
-  volume={43},
-  number={15},
-  pages={12338--12342},
-  year={2017},
-  publisher={Elsevier}
-}
-
-@article{wang2017nonlinear,
-  title={The nonlinear oil--water two-phase flow behavior for a horizontal well in triple media carbonate reservoir},
-  author={Wang, Yong and Tao, Zhengwu and Chen, Liang and Ma, Xin},
-  journal={Acta Geophysica},
-  volume={65},
-  number={5},
-  pages={977--989},
-  year={2017},
-  publisher={Springer}
-}
-
-@article{wang2018modeling,
-  title={Modeling Oil-Water Two-Phase Flow Behavior of a Fractured Vertical Well with a Finite-Conductivity Fracture in Triple Media Carbonate Reservoir},
-  author={Wang, Yong and Zhang, Chen and Huang, Rui and Cao, Haitao and Ma, Xin},
-  journal={Advances in Applied Mathematics and Mechanics},
-  volume={10},
-  number={3},
-  pages={581--610},
-  year={2018},
-  publisher={GLOBAL SCIENCE PRESS ROOM 3208, CENTRAL PLAZA, 18 HARBOUR RD, WANCHAI, HONG~…}
-}
-
 @article{ma2020conformable,
   title={The conformable fractional grey system model},
   author={Ma, Xin and Wu, Wenqing and Zeng, Bo and Wang, Yong and Wu, Xinxing},
@@ -221,16 +89,6 @@
   pages={255--271},
   year={2020},
   publisher={https:/ doi.org/10.1016/j.isatra.2019.07}
-}
-
-@article{wang2018modeling,
-  title={Modeling the nonlinear oil-water two-phase flow behavior for a multiple-fractured horizontal well in triple media carbonate reservoir},
-  author={Wang, Yong and Li, Mingjun and Ma, Xin and Gao, Wubin and Xue, Guoqing and Zhou, Jun},
-  journal={Advances in Applied Mathematics and Mechanics},
-  volume={10},
-  number={3},
-  pages={518--610},
-  year={2018}
 }
 
 @article{ma2019application,
@@ -251,38 +109,6 @@
   pages={223--234},
   year={2018},
   publisher={Pergamon}
-}
-
-@article{ahmadi2018entropy,
-  title={On the entropy points and shadowing in uniform spaces},
-  author={Ahmadi, Seyyed Alireza and Wu, Xinxing and Feng, Zonghong and Ma, Xin and Lu, Tianxiu},
-  journal={International Journal of Bifurcation and Chaos},
-  volume={28},
-  number={12},
-  pages={1850155},
-  year={2018},
-  publisher={World Scientific Publishing Company}
-}
-
-@article{wu2019rigidity,
-  title={Rigidity and sensitivity on uniform spaces},
-  author={Wu, Xinxing and Luo, Yang and Ma, Xin and Lu, Tianxiu},
-  journal={Topology and its Applications},
-  volume={252},
-  pages={145--157},
-  year={2019},
-  publisher={North-Holland}
-}
-
-@article{wang2018modeling,
-  title={Modeling the Nonlinear Flow for A Multiple-Fractured Horizontal Well With Multiple Finite-Conductivity Fractures in Triple Media Carbonate Reservoir},
-  author={Wang, Yong and Zhang, Chen and Chen, Tao and Ma, Xin},
-  journal={Journal of Porous Media},
-  volume={21},
-  number={12},
-  pages={1283--1305},
-  year={2018},
-  publisher={Begel House Inc.}
 }
 
 @article{fan2019evaluation,
@@ -315,26 +141,6 @@
   publisher={Elsevier}
 }
 
-@article{wu2019analysis,
-  title={Analysis of novel FAGM (1, 1, t\^{}$\alpha$) model to forecast health expenditure of China},
-  author={Wu, Wenqing and Ma, Xin and Zhang, Yuanyuan and Wang, Yong and Wu, Xinxing},
-  journal={Grey systems - Theory and application},
-  volume={9},
-  number={2},
-  pages={232--250},
-  year={2019},
-  publisher={Emerald}
-}
-
-@article{ma2016predicting,
-  title={Predicting the Oil Well Production Based on Multi Expression Programming},
-  author={Ma, Xin and Liu, Zhi-bin},
-  journal={Open Petroleum Engineering Journal},
-  volume={9},
-  pages={21--32},
-  year={2016}
-}
-
 @article{ma2019novel,
   title={A novel fractional time delayed grey model with Grey Wolf Optimizer and its applications in forecasting the natural gas and coal consumption in Chongqing China},
   author={Ma, Xin and Xie, Mei and Wu, Wenqing and Wu, Xinxing and Zeng, Bo},
@@ -343,17 +149,6 @@
   pages={487--507},
   year={2019},
   publisher={Elsevier}
-}
-
-@article{wu2019research,
-  title={Research on a novel fractional GM($\alpha$, n) model and its applications},
-  author={Wu, Wenqing and Ma, Xin and Wang, Yong and Zhang, Yuanyuan and Zeng, Bo},
-  journal={Grey Systems - Theory and Application},
-  volume={9},
-  number={3},
-  pages={356--373},
-  year={2019},
-  publisher={Emerald}
 }
 
 @article{wu2019daily,
@@ -366,16 +161,6 @@
   publisher={Elsevier}
 }
 
-@article{fan2020hybrid,
-  title={Hybrid support vector machines with heuristic algorithms for prediction of daily diffuse solar radiation in air-polluted regions},
-  author={Fan, Junliang and Wu, Lifeng and Ma, Xin and Zhou, Hanmi and Zhang, Fucang},
-  journal={Renewable Energy},
-  volume={145},
-  pages={2034--2045},
-  year={2020},
-  publisher={Pergamon}
-}
-
 @article{huang2019evaluation,
   title={Evaluation of CatBoost method for prediction of reference evapotranspiration in humid regions},
   author={Huang, Guomin and Wu, Lifeng and Ma, Xin and Zhang, Weiqiang and Fan, Junliang and Yu, Xiang and Zeng, Wenzhi and Zhou, Hanmi},
@@ -386,24 +171,14 @@
   publisher={Elsevier}
 }
 
-@article{fan2019light,
-  title={Light Gradient Boosting Machine: An efficient soft computing model for estimating daily reference evapotranspiration with local and external meteorological data},
-  author={Fan, Junliang and Ma, Xin and Wu, Lifeng and Zhang, Fucang and Yu, Xiang and Zeng, Wenzhi},
-  journal={Agricultural Water Management},
-  volume={225},
-  pages={105758},
-  year={2019},
-  publisher={Elsevier}
-}
-
 @article{ma2019carbon,
-  title={Carbon-dioxide mitigation in the residential building sector: A household scale-based assessment},
+  title={Carbon-dioxide mitigation in the residential building sector: a household scale-based assessment},
   author={Ma, Minda and Ma, Xin and Cai, Weiguang and Cai, Wei},
   journal={Energy Conversion and Management},
   volume={198},
   pages={111915},
   year={2019},
-  publisher={Elsevier}
+  publisher={Pergamon}
 }
 
 @article{xia2020application,
@@ -416,100 +191,6 @@
   publisher={Elsevier}
 }
 
-@article{cai2020emergy,
-  title={An emergy-based sustainability evaluation method for outsourcing machining resources},
-  author={Cai, Wei and Liu, Conghu and Jia, Shun and Chan, Felix TS and Ma, Minda and Ma, Xin},
-  journal={Journal of Cleaner Production},
-  volume={245},
-  pages={118849},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{ma2019improved,
-  title={Improved GM (1, 1) model based on Simpson formula and its applications},
-  author={Ma, Xin and Wu, Wenqing and Zhang, Yuanyuan},
-  journal={Journal of Grey System},
-  volume={31},
-  number={4},
-  pages={33--46},
-  year={2019}
-}
-
-@article{zhang2019forecasting,
-  title={Forecasting Japan’s Solar Energy Consumption Using a Novel Incomplete Gamma Grey Model},
-  author={Zhang, Peng and Ma, Xin and She, Kun},
-  journal={Sustainability},
-  volume={11},
-  number={21},
-  pages={5921},
-  year={2019},
-  publisher={Multidisciplinary Digital Publishing Institute}
-}
-
-@article{kong2017improved,
-  title={Improved GM (1, 1) model based on concave sequences and its applications},
-  author={Kong, Xinhai and Zhang, Peng and Ma, Xin},
-  journal={Grey Systems: Theory and Application},
-  year={2017},
-  publisher={Emerald Publishing Limited}
-}
-
-@article{zhang2019novel,
-  title={A Novel Power-Driven Grey Model with Whale Optimization Algorithm and Its Application in Forecasting the Residential Energy Consumption in China},
-  author={Zhang, Peng and Ma, Xin and She, Kun},
-  journal={Complexity},
-  volume={2019},
-  year={2019},
-  publisher={Hindawi}
-}
-
-@article{fan2020predicting,
-  title={Predicting daily diffuse horizontal solar radiation in various climatic regions of China using support vector machine and tree-based soft computing models with local and extrinsic climatic data},
-  author={Fan, Junliang and Wang, Xiukang and Zhang, Fucang and Ma, Xin and Wu, Lifeng},
-  journal={Journal of Cleaner Production},
-  volume={248},
-  pages={119264},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{lu2020carbon,
-  title={Carbon trading volume and price forecasting in China using multiple machine learning models},
-  author={Lu, Hongfang and Ma, Xin and Huang, Kun and Azimi, Mohammadamin},
-  journal={Journal of Cleaner Production},
-  pages={119386--https},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{wu2020predicting,
-  title={Predicting primary energy consumption using NDGM(1,1,k,c) model with Simpson formula},
-  author={Wu, Wenqing and Ma, Xin and Wang, Yong and Zeng, Bo and Cai, Wei},
-  journal={Scientia Iranica},
-  pages={doi--10},
-  year={2020}
-}
-
-@article{wu2020hybrid,
-  title={Hybrid extreme learning machine with meta-heuristic algorithms for monthly pan evaporation prediction},
-  author={Wu, Lifeng and Huang, Guomin and Fan, Junliang and Ma, Xin and Zhou, Hanmi and Zeng, Wenzhi},
-  journal={Computers and Electronics in Agriculture},
-  volume={168},
-  pages={105115},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{zhang2019novel,
-  title={A novel power-driven fractional accumulated grey model and its application in forecasting wind energy consumption of China.},
-  author={Zhang, Peng and Ma, Xin and She, Kun},
-  journal={PloS one},
-  volume={14},
-  number={12},
-  year={2019}
-}
-
 @article{wu2020novel,
   title={A novel conformable fractional non-homogeneous grey model for forecasting carbon dioxide emissions of BRICS countries},
   author={Wu, Wenqing and Ma, Xin and Zhang, Yuanyuan and Li, Wanpeng and Wang, Yong},
@@ -518,139 +199,4 @@
   pages={135447},
   year={2020},
   publisher={Elsevier}
-}
-
-@article{wang2020innovative,
-  title={An innovative hybrid model based on outlier detection and correction algorithm and heuristic intelligent optimization algorithm for daily air quality index forecasting},
-  author={Wang, Jianzhou and Du, Pei and Hao, Yan and Ma, Xin and Niu, Tong and Yang, Wendong},
-  journal={Journal of environmental management},
-  volume={255},
-  pages={109855},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{lu2020us,
-  title={US natural gas consumption prediction using an improved kernel-based nonlinear extension of the Arps decline model},
-  author={Lu, Hongfang and Ma, Xin and Azimi, Mohammadamin},
-  journal={Energy},
-  volume={194},
-  pages={116905},
-  year={2020},
-  publisher={Pergamon}
-}
-
-@article{yang2020driving,
-  title={Driving forces of China’s CO2 emissions from energy consumption based on Kaya-LMDI methods},
-  author={Yang, Jie and Cai, Wei and Ma, Minda and Li, Li and Liu, Conghu and Ma, Xin and Li, Lingling and Chen, Xingzheng},
-  journal={Science of the Total Environment},
-  volume={711},
-  pages={134569},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{zeng2020new,
-  title={A new-structure grey Verhulst model: development and performance comparison},
-  author={Zeng, Bo and Tong, Mingyu and Ma, Xin},
-  journal={Applied Mathematical Modelling},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{zeng2020modeling,
-  title={Modeling method of the grey GM (1, 1) model with interval grey action quantity and its application},
-  author={Zeng, Bo and Ma, Xin and Shi, Juanjuan},
-  journal={Complexity},
-  volume={2020},
-  year={2020},
-  publisher={Hindawi}
-}
-
-@article{lu2020hybrid,
-  title={Hybrid decision tree-based machine learning models for short-term water quality prediction},
-  author={Lu, Hongfang and Ma, Xin},
-  journal={Chemosphere},
-  volume={249},
-  pages={126169},
-  year={2020},
-  publisher={Pergamon}
-}
-
-@article{wu2020novel,
-  title={A novel Grey Bernoulli model for short-term natural gas consumption forecasting},
-  author={Wu, Wenqing and Ma, Xin and Zeng, Bo and Lv, Wangyong and Wang, Yong and Li, Wanpeng},
-  journal={Applied Mathematical Modelling},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{lu2020prediction,
-  title={Prediction of offshore wind farm power using a novel two-stage model combining kernel-based nonlinear extension of the Arps decline model with a multi-objective grey wolf optimizer},
-  author={Lu, Hongfang and Ma, Xin and Huang, Kun and Azimi, Mohammadamin},
-  journal={Renewable and Sustainable Energy Reviews},
-  volume={127},
-  pages={109856},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{lu2020short,
-  title={Short-term prediction of building energy consumption employing an improved extreme gradient boosting model: A case study of an intake tower},
-  author={Lu, Hongfang and Cheng, Feifei and Ma, Xin and Hu, Gang},
-  journal={Energy},
-  pages={117756},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{lu2020carbon,
-  title={Carbon dioxide transport via pipelines: A systematic review},
-  author={Lu, Hongfang and Ma, Xin and Huang, Kun and Fu, Lingdi and Azimi, Mohammadamin},
-  journal={Journal of Cleaner Production},
-  note={121994},
-  year={2020},
-  publisher={Elsevier}
-  
-}
-
-@article{feng2020asymptotically,
-  title={Asymptotically almost periodic solutions for certain differential equations with piecewise constant arguments},
-  author={Feng, Zonghong and Wang, Yong and Ma, Xin},
-  journal={Advances in Difference Equations},
-  volume={2020},
-  number={1},
-  pages={1--22},
-  year={2020},
-  publisher={SpringerOpen}
-}
-
-@article{ma2020low,
-  title={Low carbon roadmap of residential building sector in China: Historical mitigation and prospective peak},
-  author={Ma, Minda and Ma, Xin and Cai, Wei and Cai, Weiguang},
-  journal={Applied Energy},
-  volume={273},
-  pages={115247},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{wu2020predicting,
-  title={Predicting China’s energy consumption using a novel grey Riccati model},
-  author={Wu, Wenqing and Ma, Xin and Wang, Yong and Cai, Wei and Zeng, Bo},
-  journal={Applied Soft Computing},
-  pages={106555},
-  year={2020},
-  publisher={Elsevier}
-}
-
-@article{hu2020forecasting,
-  title={Forecasting manufacturing industrial natural gas consumption of China using a novel time-delayed fractional grey model with multiple fractional order},
-  author={Hu, Yu and Ma, Xin and Li, Wanpeng and Wu, Wenqing and Tu, Daoxing},
-  journal={Computational and Applied Mathematics},
-  volume={39},
-  number={4},
-  pages={1--30},
-  year={2020},
-  publisher={Springer}
 }
