--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -701,3 +701,223 @@
   year={2020},
   publisher={Elsevier}
 }
+
+@article{zeng2020new,
+  title     = {A new-structure grey Verhulst model: development and performance comparison},
+  author    = {Zeng, Bo and Tong, Mingyu and Ma, Xin},
+  journal   = {Applied Mathematical Modelling},
+  volume    = {81},
+  pages     = {522--537},
+  year      = {2020},
+  publisher = {Elsevier}
+}
+
+@article{wu2020novel,
+  title     = {A novel Grey Bernoulli model for short-term natural gas consumption forecasting},
+  author    = {Wu, Wenqing and Ma, Xin and Zeng, Bo and Lv, Wangyong and Wang, Yong and Li, Wanpeng},
+  journal   = {Applied Mathematical Modelling},
+  volume    = {84},
+  pages     = {393--404},
+  year      = {2020},
+  publisher = {Elsevier}
+}
+
+@article{lu2020prediction,
+  title     = {Prediction of offshore wind farm power using a novel two-stage model combining kernel-based nonlinear extension of the Arps decline model with a multi-objective grey wolf optimizer},
+  author    = {Lu, Hongfang and Ma, Xin and Huang, Kun and Azimi, Mohammadamin},
+  journal   = {Renewable and Sustainable Energy Reviews},
+  volume    = {127},
+  pages     = {109856},
+  year      = {2020},
+  publisher = {Pergamon}
+}
+
+@article{lu2020short,
+  title     = {Short-term prediction of building energy consumption employing an improved extreme gradient boosting model: a case study of an intake tower},
+  author    = {Lu, Hongfang and Cheng, Feifei and Ma, Xin and Hu, Gang},
+  journal   = {Energy},
+  volume    = {203},
+  pages     = {117756},
+  year      = {2020},
+  publisher = {Pergamon}
+}
+
+@article{lu2020carbon,
+  title     = {Carbon dioxide transport via pipelines: A systematic review},
+  author    = {Lu, Hongfang and Ma, Xin and Huang, Kun and Fu, Lingdi and Azimi, Mohammadamin},
+  journal   = {Journal of Cleaner Production},
+  volume    = {266},
+  pages     = {121994},
+  year      = {2020},
+  publisher = {Elsevier}
+}
+
+@article{ma2020low,
+  title     = {Low carbon roadmap of residential building sector in China: Historical mitigation and prospective peak},
+  author    = {Ma, Minda and Ma, Xin and Cai, Wei and Cai, Weiguang},
+  journal   = {Applied Energy},
+  volume    = {273},
+  pages     = {115247},
+  year      = {2020},
+  publisher = {Elsevier}
+}
+
+@article{feng2020asymptotically,
+  title     = {Asymptotically almost periodic solutions for certain differential equations with piecewise constant arguments},
+  author    = {Feng, Zonghong and Wang, Yong and Ma, Xin},
+  journal   = {Advances in Difference Equations},
+  volume    = {2020},
+  number    = {1},
+  pages     = {1--22},
+  year      = {2020},
+  publisher = {SpringerOpen}
+}
+
+@article{wu2020predicting,
+  title     = {Predicting China's energy consumption using a novel grey Riccati model},
+  author    = {Wu, Wenqing and Ma, Xin and Wang, Yong and Cai, Wei and Zeng, Bo},
+  journal   = {Applied Soft Computing},
+  volume    = {95},
+  pages     = {106555},
+  year      = {2020},
+  publisher = {Elsevier}
+}
+
+@article{hu2020forecasting,
+  title     = {Forecasting manufacturing industrial natural gas consumption of China using a novel time-delayed fractional grey model with multiple fractional order},
+  author    = {Hu, Yu and Ma, Xin and Li, Wanpeng and Wu, Wenqing and Tu, Daoxing},
+  journal   = {Computational and Applied Mathematics},
+  volume    = {39},
+  number    = {4},
+  pages     = {1--30},
+  year      = {2020},
+  publisher = {Springer}
+}
+
+@article{wu2020forecasting,
+  title     = {Forecasting short-term solar energy generation in Asia Pacific using a nonlinear grey Bernoulli model with time power term},
+  author    = {Wu, Wenqing and Ma, Xin and Zeng, Bo and Zhang, Yuanyuan and Li, Wanpeng},
+  journal   = {Energy \& Environment},
+  pages     = {0958305X20960700},
+  year      = {2020},
+  publisher = {SAGE Publications Sage UK: London, England}
+}
+
+@article{zeng2020new,
+  title     = {A new-structure grey Verhulst model for China’s tight gas production forecasting},
+  author    = {Zeng, Bo and Ma, Xin and Zhou, Meng},
+  journal   = {Applied Soft Computing},
+  volume    = {96},
+  pages     = {106600},
+  year      = {2020},
+  publisher = {Elsevier}
+}
+
+@article{xiang2021novel,
+  title     = {A novel hyperbolic time-delayed grey model with Grasshopper Optimization Algorithm and its applications},
+  author    = {Xiang, Xiwang and Ma, Xin and Fang, Yizhu and Wu, Wenqing and Zhang, Gaoxun},
+  journal   = {Ain Shams Engineering Journal},
+  volume    = {12},
+  number    = {1},
+  pages     = {865--874},
+  year      = {2021},
+  publisher = {Elsevier}
+}
+
+@article{xiang2020research,
+  title     = {Research and application of novel Euler polynomial-driven grey model for short-term PM10 forecasting},
+  author    = {Xiang, Xiwang and Ma, Xin and Ma, Minda and Wu, Wenqing and Yu, Lang},
+  journal   = {Grey Systems: Theory and Application},
+  year      = {2020},
+  publisher = {Emerald Publishing Limited}
+}
+
+@article{zeng2020novel,
+  title     = {A novel multi-variable grey forecasting model and its application in forecasting the grain production in China},
+  author    = {Zeng, Bo and Li, Hui and Ma, Xin},
+  journal   = {Computers \& Industrial Engineering},
+  volume    = {150},
+  pages     = {106915},
+  year      = {2020},
+  publisher = {Pergamon}
+}
+
+@article{yu2021novel,
+  title     = {A novel Elastic Net-based NGBMC (1, n) model with multi-objective optimization for nonlinear time series forecasting},
+  author    = {Yu, Lang and Ma, Xin and Wu, Wenqing and Wang, Yong and Zeng, Bo},
+  journal   = {Communications in Nonlinear Science and Numerical Simulation},
+  pages     = {105696},
+  year      = {2021},
+  publisher = {Elsevier}
+}
+
+@article{yu2021application,
+  title     = {Application of a novel time-delayed power-driven grey model to forecast photovoltaic power generation in the Asia-Pacific region},
+  author    = {Yu, Lang and Ma, Xin and Wu, Wenqing and Xiang, Xiwang and Wang, Yong and Zeng, Bo},
+  journal   = {Sustainable Energy Technologies and Assessments},
+  volume    = {44},
+  pages     = {100968},
+  year      = {2021},
+  publisher = {Elsevier}
+}
+
+@article{lu2021energy,
+  title     = {Energy price prediction using data-driven models: A decade review},
+  author    = {Lu, Hongfang and Ma, Xin and Ma, Minda and Zhu, Senlin},
+  journal   = {Computer Science Review},
+  volume    = {39},
+  pages     = {100356},
+  year      = {2021},
+  publisher = {Elsevier}
+}
+
+@article{lu2021hybrid,
+  title     = {A hybrid multi-objective optimizer-based model for daily electricity demand prediction considering COVID-19},
+  author    = {Lu, Hongfang and Ma, Xin and Ma, Minda},
+  journal   = {Energy},
+  volume    = {219},
+  pages     = {119568},
+  year      = {2021},
+  publisher = {Pergamon}
+}
+
+@article{wu2020mean,
+  title     = {The mean sensitivity and mean equicontinuity in uniform spaces},
+  author    = {Wu, Xinxing and Liang, Shudi and Ma, Xin and Lu, Tianxiu and Ahmadi, Seyyed Alireza},
+  journal   = {International Journal of Bifurcation and Chaos},
+  volume    = {30},
+  number    = {08},
+  pages     = {2050122},
+  year      = {2020},
+  publisher = {World Scientific Publishing Company}
+}
+
+@article{wang2020dynamic,
+  title   = {Dynamic analysis of oil-water two-phase flow for a multiple-fractured horizontal well with multiple finite-conductivity fractures in triple media carbonate reservoir},
+  author  = {Wang, Yong and Tao, Zhengwu and Yang, Kun and Ma, Xin and Tian, Donghong and Feng, Zonghong},
+  journal = {ZAMM-Journal of Applied Mathematics and Mechanics/Zeitschrift f{\"u}r Angewandte Mathematik und Mechanik},
+  volume  = {100},
+  number  = {4},
+  pages   = {e201900046},
+  year    = {2020}
+}
+
+@article{li2021optimization,
+  title   = {Optimization of load sharing for parallel compressors using a novel hybrid intelligent algorithm},
+  author  = {Li, Xia and Cui, Tao and Huang, Kun and Ma, Xin},
+  journal = {Energy Science \& Engineering},
+  volume  = {9},
+  number  = {3},
+  pages   = {330--342},
+  year    = {2021}
+}
+
+@article{ma2021novel,
+  title     = {A novel neural grey system model with Bayesian regularization and its applications},
+  author    = {Ma, Xin and Xie, Mei and Suykens, Johan AK},
+  journal   = {Neurocomputing},
+  volume    = {456},
+  pages     = {61--75},
+  year      = {2021},
+  publisher = {Elsevier}
+}
