--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -132,7 +132,6 @@
   author={Ma, Xin and Liu, Zhibin},
   journal={Neural Computing and Applications},
   volume={29},
-  number={2},
   pages={579--591},
   year={2018},
   publisher={Springer London}
@@ -196,10 +195,9 @@
   author={Wang, Yong and Tao, Zhengwu and Chen, Liang and Ma, Xin},
   journal={Acta Geophysica},
   volume={65},
-  number={5},
   pages={977--989},
   year={2017},
-  publisher={Springer}
+  publisher={Springer International Publishing}
 }
 
 @article{wang2018modeling,
@@ -388,7 +386,7 @@
 @article{fan2019light,
   title={Light Gradient Boosting Machine: An efficient soft computing model for estimating daily reference evapotranspiration with local and external meteorological data},
   author={Fan, Junliang and Ma, Xin and Wu, Lifeng and Zhang, Fucang and Yu, Xiang and Zeng, Wenzhi},
-  journal={Agricultural Water Management},
+  journal={Agricultural water management},
   volume={225},
   pages={105758},
   year={2019},
@@ -436,14 +434,14 @@
 }
 
 @article{zhang2019forecasting,
-  title={Forecasting Japan’s Solar Energy Consumption Using a Novel Incomplete Gamma Grey Model},
+  title={Forecasting Japan’s solar energy consumption using a novel incomplete gamma grey model},
   author={Zhang, Peng and Ma, Xin and She, Kun},
   journal={Sustainability},
   volume={11},
   number={21},
   pages={5921},
   year={2019},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={MDPI}
 }
 
 @article{kong2017improved,
@@ -493,7 +491,7 @@
 @article{wu2020hybrid,
   title={Hybrid extreme learning machine with meta-heuristic algorithms for monthly pan evaporation prediction},
   author={Wu, Lifeng and Huang, Guomin and Fan, Junliang and Ma, Xin and Zhou, Hanmi and Zeng, Wenzhi},
-  journal={Computers and Electronics in Agriculture},
+  journal={Computers and electronics in agriculture},
   volume={168},
   pages={105115},
   year={2020},
@@ -503,7 +501,7 @@
 @article{zhang2019novel,
   title={A novel power-driven fractional accumulated grey model and its application in forecasting wind energy consumption of China},
   author={Zhang, Peng and Ma, Xin and She, Kun},
-  journal={PloS one},
+  journal={Plos one},
   volume={14},
   number={12},
   pages={e0225362},
@@ -552,7 +550,7 @@
 }
 
 @article{zeng2020new,
-  title={A new-structure grey Verhulst model: Development and performance comparison},
+  title={A new-structure grey Verhulst model: development and performance comparison},
   author={Zeng, Bo and Tong, Mingyu and Ma, Xin},
   journal={Applied Mathematical Modelling},
   volume={81},
@@ -566,8 +564,9 @@
   author={Zeng, Bo and Ma, Xin and Shi, Juanjuan},
   journal={Complexity},
   volume={2020},
+  pages={1--10},
   year={2020},
-  publisher={Hindawi}
+  publisher={Hindawi Limited}
 }
 
 @article{lu2020hybrid,
@@ -584,6 +583,8 @@
   title={A novel Grey Bernoulli model for short-term natural gas consumption forecasting},
   author={Wu, Wenqing and Ma, Xin and Zeng, Bo and Lv, Wangyong and Wang, Yong and Li, Wanpeng},
   journal={Applied Mathematical Modelling},
+  volume={84},
+  pages={393--404},
   year={2020},
   publisher={Elsevier}
 }
@@ -595,22 +596,24 @@
   volume={127},
   pages={109856},
   year={2020},
-  publisher={Elsevier}
+  publisher={Pergamon}
 }
 
 @article{lu2020short,
   title={Short-term prediction of building energy consumption employing an improved extreme gradient boosting model: A case study of an intake tower},
   author={Lu, Hongfang and Cheng, Feifei and Ma, Xin and Hu, Gang},
   journal={Energy},
+  volume={203},
   pages={117756},
   year={2020},
-  publisher={Elsevier}
+  publisher={Pergamon}
 }
 
 @article{lu2020carbon,
   title={Carbon dioxide transport via pipelines: A systematic review},
   author={Lu, Hongfang and Ma, Xin and Huang, Kun and Fu, Lingdi and Azimi, Mohammadamin},
   journal={Journal of Cleaner Production},
+  volume={266},
   pages={121994},
   year={2020},
   publisher={Elsevier}
@@ -638,7 +641,7 @@
 }
 
 @article{wu2020predicting,
-  title={Predicting China’s energy consumption using a novel grey Riccati model},
+  title={Predicting China's energy consumption using a novel grey Riccati model},
   author={Wu, Wenqing and Ma, Xin and Wang, Yong and Cai, Wei and Zeng, Bo},
   journal={Applied Soft Computing},
   volume={95},
@@ -652,18 +655,19 @@
   author={Hu, Yu and Ma, Xin and Li, Wanpeng and Wu, Wenqing and Tu, Daoxing},
   journal={Computational and Applied Mathematics},
   volume={39},
-  number={4},
   pages={1--30},
   year={2020},
-  publisher={Springer}
+  publisher={Springer International Publishing}
 }
 
-@article{wu2020forecasting,
+@article{wu2021forecasting,
   title={Forecasting short-term solar energy generation in Asia Pacific using a nonlinear grey Bernoulli model with time power term},
   author={Wu, Wenqing and Ma, Xin and Zeng, Bo and Zhang, Yuanyuan and Li, Wanpeng},
   journal={Energy \& Environment},
-  pages={0958305X20960700},
-  year={2020},
+  volume={32},
+  number={5},
+  pages={759--783},
+  year={2021},
   publisher={SAGE Publications Sage UK: London, England}
 }
 
@@ -677,19 +681,25 @@
   publisher={Elsevier}
 }
 
-@article{xiang2020novel,
+@article{xiang2021novel,
   title={A novel hyperbolic time-delayed grey model with Grasshopper Optimization Algorithm and its applications},
   author={Xiang, Xiwang and Ma, Xin and Fang, Yizhu and Wu, Wenqing and Zhang, Gaoxun},
   journal={Ain Shams Engineering Journal},
-  year={2020},
+  volume={12},
+  number={1},
+  pages={865--874},
+  year={2021},
   publisher={Elsevier}
 }
 
-@article{xiang2020research,
+@article{xiang2021research,
   title={Research and application of novel Euler polynomial-driven grey model for short-term PM10 forecasting},
   author={Xiang, Xiwang and Ma, Xin and Ma, Minda and Wu, Wenqing and Yu, Lang},
   journal={Grey Systems: Theory and Application},
-  year={2020},
+  volume={11},
+  number={3},
+  pages={498--517},
+  year={2021},
   publisher={Emerald Publishing Limited}
 }
 
@@ -697,227 +707,400 @@
   title={A novel multi-variable grey forecasting model and its application in forecasting the grain production in China},
   author={Zeng, Bo and Li, Hui and Ma, Xin},
   journal={Computers \& Industrial Engineering},
+  volume={150},
   pages={106915},
+  year={2020},
+  publisher={Pergamon}
+}
+
+@article{yu2021novel,
+  title={A novel Elastic Net-based NGBMC (1, n) model with multi-objective optimization for nonlinear time series forecasting},
+  author={Yu, Lang and Ma, Xin and Wu, Wenqing and Wang, Yong and Zeng, Bo},
+  journal={Communications in Nonlinear Science and Numerical Simulation},
+  pages={105696},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{yu2021application,
+  title={Application of a novel time-delayed power-driven grey model to forecast photovoltaic power generation in the Asia-Pacific region},
+  author={Yu, Lang and Ma, Xin and Wu, Wenqing and Xiang, Xiwang and Wang, Yong and Zeng, Bo},
+  journal={Sustainable Energy Technologies and Assessments},
+  volume={44},
+  pages={100968},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{lu2021energy,
+  title={Energy price prediction using data-driven models: A decade review},
+  author={Lu, Hongfang and Ma, Xin and Ma, Minda and Zhu, Senlin},
+  journal={Computer Science Review},
+  volume={39},
+  pages={100356},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{li2020novel,
+  title={A Novel Grey Model with A Three-parameter Background Value and Its Application in Forecasting Average Annual Water Consumption Per Capita in Urban Areas Along The Yangtze River Basin.},
+  author={Li, Shuliang and Zeng, Bo and Ma, Xin and Zhang, Dehai},
+  journal={Journal of Grey system},
+  volume={32},
+  number={1},
+  year={2020}
+}
+
+@article{wu2019various,
+  title={Various shadowing in linear dynamical systems},
+  author={Wu, Xinxing and Zhang, Xu and Ma, Xin},
+  journal={International Journal of Bifurcation and Chaos},
+  volume={29},
+  number={03},
+  pages={1950042},
+  year={2019},
+  publisher={World Scientific Publishing Company}
+}
+
+@article{lu2021hybrid,
+  title={A hybrid multi-objective optimizer-based model for daily electricity demand prediction considering COVID-19},
+  author={Lu, Hongfang and Ma, Xin and Ma, Minda},
+  journal={Energy},
+  volume={219},
+  pages={119568},
+  year={2021},
+  publisher={Pergamon}
+}
+
+@article{wu2020note,
+  title={A note on the sensitivity of semiflows},
+  author={Wu, Xinxing and Ma, Xin and Chen, Guanrong and Lu, Tianxiu},
+  journal={Topology and its Applications},
+  volume={271},
+  pages={107046},
+  year={2020},
+  publisher={North-Holland}
+}
+
+@article{wu2020mean,
+  title={The mean sensitivity and mean equicontinuity in uniform spaces},
+  author={Wu, Xinxing and Liang, Shudi and Ma, Xin and Lu, Tianxiu and Ahmadi, Seyyed Alireza},
+  journal={International Journal of Bifurcation and Chaos},
+  volume={30},
+  number={08},
+  pages={2050122},
+  year={2020},
+  publisher={World Scientific Publishing Company}
+}
+
+@article{wang2020some,
+  title={Some novel results of T-periodic solutions for Rayleigh type equation with double deviating arguments},
+  author={Wang, Yong and Tao, ZW and Tian, DH and Ma, Xin and Li, MJ and Feng, ZH},
+  journal={University Politehnica of Bucharest Scientific Bulletin-Series A-Applied Mathematics and Physics},
+  volume={82},
+  number={1},
+  pages={55--68},
+  year={2020}
+}
+
+@article{wang2020dynamic,
+  title={Dynamic analysis of oil-water two-phase flow for a multiple-fractured horizontal well with multiple finite-conductivity fractures in triple media carbonate reservoir},
+  author={Wang, Yong and Tao, Zhengwu and Yang, Kun and Ma, Xin and Tian, Donghong and Feng, Zonghong},
+  journal={ZAMM-Journal of Applied Mathematics and Mechanics/Zeitschrift f{\"u}r Angewandte Mathematik und Mechanik},
+  volume={100},
+  number={4},
+  pages={e201900046},
+  year={2020}
+}
+
+@article{li2021optimization,
+  title={Optimization of load sharing for parallel compressors using a novel hybrid intelligent algorithm},
+  author={Li, Xia and Cui, Tao and Huang, Kun and Ma, Xin},
+  journal={Energy Science \& Engineering},
+  volume={9},
+  number={3},
+  pages={330--342},
+  year={2021}
+}
+
+@article{ma2021novel,
+  title={A novel neural grey system model with Bayesian regularization and its applications},
+  author={Ma, Xin and Xie, Mei and Suykens, Johan AK},
+  journal={Neurocomputing},
+  volume={456},
+  pages={61--75},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{cai2021novel,
+  title={A novel ensemble learning-based grey model for electricity supply forecasting in China},
+  author={Cai, Yubin and Ma, Xin},
+  journal={AIMS Math},
+  volume={6},
+  pages={12339--12358},
+  year={2021}
+}
+
+@article{wang2020optimizing,
+  title={Optimizing injection process of water-alternate-gas using different produced gas densities in enriched-gas flooding},
+  author={Wang, Yong and Tao, Zhengwu and Tian, Donghong and Ma, Xin and Feng, Zonghong},
+  journal={Chemistry and Technology of Fuels and Oils},
+  volume={56},
+  pages={271--284},
+  year={2020},
+  publisher={Springer US}
+}
+
+@article{lu2021multi,
+  title={A multi-objective optimizer-based model for predicting composite material properties},
+  author={Lu, Hongfang and Behbahani, Saleh and Ma, Xin and Iseley, Tom},
+  journal={Construction and Building Materials},
+  volume={284},
+  pages={122746},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{ma2020length,
+  title={Length of stay prediction for ICU patients using individualized single classification algorithm},
+  author={Ma, Xin and Si, Yabin and Wang, Zifan and Wang, Youqing},
+  journal={Computer methods and programs in biomedicine},
+  volume={186},
+  pages={105224},
   year={2020},
   publisher={Elsevier}
 }
 
-@article{zeng2020new,
-  title     = {A new-structure grey Verhulst model: development and performance comparison},
-  author    = {Zeng, Bo and Tong, Mingyu and Ma, Xin},
-  journal   = {Applied Mathematical Modelling},
-  volume    = {81},
-  pages     = {522--537},
-  year      = {2020},
-  publisher = {Elsevier}
+@article{wang2021novel,
+  title={A novel Hausdorff fractional NGMC (p, n) grey prediction model with Grey Wolf Optimizer and its applications in forecasting energy production and conversion of China},
+  author={Wang, Yong and Nie, Rui and Ma, Xin and Liu, Zhibin and Chi, Pei and Wu, Wenqing and Guo, Binghong and Yang, Xinping and Zhang, Lifeng},
+  journal={Applied Mathematical Modelling},
+  volume={97},
+  pages={381--397},
+  year={2021},
+  publisher={Elsevier}
 }
 
-@article{wu2020novel,
-  title     = {A novel Grey Bernoulli model for short-term natural gas consumption forecasting},
-  author    = {Wu, Wenqing and Ma, Xin and Zeng, Bo and Lv, Wangyong and Wang, Yong and Li, Wanpeng},
-  journal   = {Applied Mathematical Modelling},
-  volume    = {84},
-  pages     = {393--404},
-  year      = {2020},
-  publisher = {Elsevier}
+@article{li2022carbon,
+  title={Carbon reduction in commercial building operations: A provincial retrospection in China},
+  author={Li, Kai and Ma, Minda and Xiang, Xiwang and Feng, Wei and Ma, Zhili and Cai, Weiguang and Ma, Xin},
+  journal={Applied Energy},
+  volume={306},
+  pages={118098},
+  year={2022},
+  publisher={Elsevier}
 }
 
-@article{lu2020prediction,
-  title     = {Prediction of offshore wind farm power using a novel two-stage model combining kernel-based nonlinear extension of the Arps decline model with a multi-objective grey wolf optimizer},
-  author    = {Lu, Hongfang and Ma, Xin and Huang, Kun and Azimi, Mohammadamin},
-  journal   = {Renewable and Sustainable Energy Reviews},
-  volume    = {127},
-  pages     = {109856},
-  year      = {2020},
-  publisher = {Pergamon}
+@article{xiang2022operational,
+  title={Operational carbon change in commercial buildings under the carbon neutral goal: A LASSO--WOA approach},
+  author={Xiang, Xiwang and Ma, Xin and Ma, Zhili and Ma, Minda},
+  journal={Buildings},
+  volume={12},
+  number={1},
+  pages={54},
+  year={2022},
+  publisher={Multidisciplinary Digital Publishing Institute}
 }
 
-@article{lu2020short,
-  title     = {Short-term prediction of building energy consumption employing an improved extreme gradient boosting model: a case study of an intake tower},
-  author    = {Lu, Hongfang and Cheng, Feifei and Ma, Xin and Hu, Gang},
-  journal   = {Energy},
-  volume    = {203},
-  pages     = {117756},
-  year      = {2020},
-  publisher = {Pergamon}
+@article{wu2022novel,
+  title={A novel multivariate grey system model with conformable fractional derivative and its applications},
+  author={Wu, Wenqing and Ma, Xin and Zeng, Bo and Zhang, Hui and Zhang, Peng},
+  journal={Computers \& Industrial Engineering},
+  volume={164},
+  pages={107888},
+  year={2022},
+  publisher={Pergamon}
 }
 
-@article{lu2020carbon,
-  title     = {Carbon dioxide transport via pipelines: A systematic review},
-  author    = {Lu, Hongfang and Ma, Xin and Huang, Kun and Fu, Lingdi and Azimi, Mohammadamin},
-  journal   = {Journal of Cleaner Production},
-  volume    = {266},
-  pages     = {121994},
-  year      = {2020},
-  publisher = {Elsevier}
+@article{xiang2022python,
+  title={Python-LMDI: a tool for index decomposition analysis of building carbon emissions},
+  author={Xiang, Xiwang and Ma, Xin and Ma, Zhili and Ma, Minda and Cai, Weiguang},
+  journal={Buildings},
+  volume={12},
+  number={1},
+  pages={83},
+  year={2022},
+  publisher={MDPI}
 }
 
-@article{ma2020low,
-  title     = {Low carbon roadmap of residential building sector in China: Historical mitigation and prospective peak},
-  author    = {Ma, Minda and Ma, Xin and Cai, Wei and Cai, Weiguang},
-  journal   = {Applied Energy},
-  volume    = {273},
-  pages     = {115247},
-  year      = {2020},
-  publisher = {Elsevier}
+@article{tian2021new,
+  title={A New Information Priority Accumulated Grey Model with Hyperbolic Sinusoidal Term and its Application},
+  author={Tian, Xue and Wu, Wenqing and Ma, Xin and Zhang, Peng},
+  journal={International Journal of Grey Systems},
+  volume={1},
+  number={2},
+  pages={5--19},
+  year={2021}
 }
 
-@article{feng2020asymptotically,
-  title     = {Asymptotically almost periodic solutions for certain differential equations with piecewise constant arguments},
-  author    = {Feng, Zonghong and Wang, Yong and Ma, Xin},
-  journal   = {Advances in Difference Equations},
-  volume    = {2020},
-  number    = {1},
-  pages     = {1--22},
-  year      = {2020},
-  publisher = {SpringerOpen}
+@article{cai2021forecasting,
+  title={Forecasting Natural Gas Consumption in the US Power Sector by a Randomly Optimized Fractional Grey System Model},
+  author={Cai, Yubin and Ma, Xin and Wu, Wenqing and Deng, Yanqiao},
+  journal={Mathematical Problems in Engineering},
+  volume={2021},
+  pages={1--11},
+  year={2021},
+  publisher={Hindawi Limited}
 }
 
-@article{wu2020predicting,
-  title     = {Predicting China's energy consumption using a novel grey Riccati model},
-  author    = {Wu, Wenqing and Ma, Xin and Wang, Yong and Cai, Wei and Zeng, Bo},
-  journal   = {Applied Soft Computing},
-  volume    = {95},
-  pages     = {106555},
-  year      = {2020},
-  publisher = {Elsevier}
+@article{wang2022novel,
+  title={A novel fractional time-delayed grey Bernoulli forecasting model and its application for the energy production and consumption prediction},
+  author={Wang, Yong and He, Xinbo and Zhang, Lei and Ma, Xin and Wu, Wenqing and Nie, Rui and Chi, Pei and Zhang, Yuyang},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={110},
+  pages={104683},
+  year={2022},
+  publisher={Pergamon}
 }
 
-@article{hu2020forecasting,
-  title     = {Forecasting manufacturing industrial natural gas consumption of China using a novel time-delayed fractional grey model with multiple fractional order},
-  author    = {Hu, Yu and Ma, Xin and Li, Wanpeng and Wu, Wenqing and Tu, Daoxing},
-  journal   = {Computational and Applied Mathematics},
-  volume    = {39},
-  number    = {4},
-  pages     = {1--30},
-  year      = {2020},
-  publisher = {Springer}
+@article{lu2021impacts,
+  title={Impacts of the COVID-19 pandemic on the energy sector},
+  author={Lu, Hong-fang and Ma, Xin and others},
+  journal={Journal of Zhejiang University. Science. a},
+  volume={22},
+  number={12},
+  pages={941},
+  year={2021},
+  publisher={Nature Publishing Group}
 }
 
-@article{wu2020forecasting,
-  title     = {Forecasting short-term solar energy generation in Asia Pacific using a nonlinear grey Bernoulli model with time power term},
-  author    = {Wu, Wenqing and Ma, Xin and Zeng, Bo and Zhang, Yuanyuan and Li, Wanpeng},
-  journal   = {Energy \& Environment},
-  pages     = {0958305X20960700},
-  year      = {2020},
-  publisher = {SAGE Publications Sage UK: London, England}
+@article{xiang2022historical,
+  title={Historical decarbonization of global commercial building operations in the 21st century},
+  author={Xiang, Xiwang and Ma, Minda and Ma, Xin and Chen, Liming and Cai, Weiguang and Feng, Wei and Ma, Zhili},
+  journal={Applied Energy},
+  volume={322},
+  pages={119401},
+  year={2022},
+  publisher={Elsevier}
 }
 
-@article{zeng2020new,
-  title     = {A new-structure grey Verhulst model for China’s tight gas production forecasting},
-  author    = {Zeng, Bo and Ma, Xin and Zhou, Meng},
-  journal   = {Applied Soft Computing},
-  volume    = {96},
-  pages     = {106600},
-  year      = {2020},
-  publisher = {Elsevier}
+@article{wang2022novel,
+  title={A novel exponential time delayed fractional grey model and its application in forecasting oil production and consumption of China},
+  author={Wang, Yong and Zhang, Lei and He, Xinbo and Ma, Xin and Wu, Wenqing and Nie, Rui and Chi, Pei and Zhang, Yuyang},
+  journal={Cybernetics and Systems},
+  pages={1--29},
+  year={2022},
+  publisher={Taylor \& Francis}
 }
 
-@article{xiang2021novel,
-  title     = {A novel hyperbolic time-delayed grey model with Grasshopper Optimization Algorithm and its applications},
-  author    = {Xiang, Xiwang and Ma, Xin and Fang, Yizhu and Wu, Wenqing and Zhang, Gaoxun},
-  journal   = {Ain Shams Engineering Journal},
-  volume    = {12},
-  number    = {1},
-  pages     = {865--874},
-  year      = {2021},
-  publisher = {Elsevier}
+@article{wang2022self,
+  title={Self-adaptive discrete grey model based on a novel fractional order reverse accumulation sequence and its application in forecasting clean energy power generation in China},
+  author={Wang, Yong and Chi, Pei and Nie, Rui and Ma, Xin and Wu, Wenqing and Guo, Binghong},
+  journal={Energy},
+  volume={253},
+  pages={124093},
+  year={2022},
+  publisher={Pergamon}
 }
 
-@article{xiang2020research,
-  title     = {Research and application of novel Euler polynomial-driven grey model for short-term PM10 forecasting},
-  author    = {Xiang, Xiwang and Ma, Xin and Ma, Minda and Wu, Wenqing and Yu, Lang},
-  journal   = {Grey Systems: Theory and Application},
-  year      = {2020},
-  publisher = {Emerald Publishing Limited}
+@article{wang2022novel,
+  title={A novel fractional structural adaptive grey Chebyshev polynomial Bernoulli model and its application in forecasting renewable energy production of China},
+  author={Wang, Yong and Nie, Rui and Chi, Pei and Ma, Xin and Wu, Wenqing and Guo, Binhong and He, Xinbo and Zhang, Lei and Zhang, Yuyang},
+  journal={Expert Systems with Applications},
+  volume={210},
+  pages={118500},
+  year={2022},
+  publisher={Pergamon}
 }
 
-@article{zeng2020novel,
-  title     = {A novel multi-variable grey forecasting model and its application in forecasting the grain production in China},
-  author    = {Zeng, Bo and Li, Hui and Ma, Xin},
-  journal   = {Computers \& Industrial Engineering},
-  volume    = {150},
-  pages     = {106915},
-  year      = {2020},
-  publisher = {Pergamon}
+@article{deng2022multi,
+  title={Multi-step ahead forecasting of daily urban gas load in Chengdu using a Tanimoto kernel-based NAR model and Whale optimization},
+  author={Deng, Yanqiao and Ma, Xin and Zhang, Peng and Cai, Yubin},
+  journal={Energy},
+  volume={260},
+  pages={124993},
+  year={2022},
+  publisher={Pergamon}
 }
 
-@article{yu2021novel,
-  title     = {A novel Elastic Net-based NGBMC (1, n) model with multi-objective optimization for nonlinear time series forecasting},
-  author    = {Yu, Lang and Ma, Xin and Wu, Wenqing and Wang, Yong and Zeng, Bo},
-  journal   = {Communications in Nonlinear Science and Numerical Simulation},
-  pages     = {105696},
-  year      = {2021},
-  publisher = {Elsevier}
+@article{wang2022novel,
+  title={A novel semi-analytical model for oil-water two-phase flow of a fractured vertical well in triple media carbonate reservoir},
+  author={Wang, Yong and Ma, Xin and Wu, Wenqing and Feng, Zonghong},
+  journal={International Journal of Oil, Gas and Coal Technology},
+  volume={30},
+  number={1},
+  pages={18--45},
+  year={2022},
+  publisher={Inderscience Publishers (IEL)}
 }
 
-@article{yu2021application,
-  title     = {Application of a novel time-delayed power-driven grey model to forecast photovoltaic power generation in the Asia-Pacific region},
-  author    = {Yu, Lang and Ma, Xin and Wu, Wenqing and Xiang, Xiwang and Wang, Yong and Zeng, Bo},
-  journal   = {Sustainable Energy Technologies and Assessments},
-  volume    = {44},
-  pages     = {100968},
-  year      = {2021},
-  publisher = {Elsevier}
+@article{wang2022novel,
+  title={A novel structure adaptive fractional discrete grey forecasting model and its application in China’s crude oil production prediction},
+  author={Wang, Yong and Ye, Lingling and Yang, Zhongsen and Ma, Xin and Wu, Wenqing and Wang, Li and He, Xinbo and Zhang, Lei and Zhang, Yuyang and Zhou, Ying and others},
+  journal={Expert Systems with Applications},
+  volume={207},
+  pages={118104},
+  year={2022},
+  publisher={Pergamon}
 }
 
-@article{lu2021energy,
-  title     = {Energy price prediction using data-driven models: A decade review},
-  author    = {Lu, Hongfang and Ma, Xin and Ma, Minda and Zhu, Senlin},
-  journal   = {Computer Science Review},
-  volume    = {39},
-  pages     = {100356},
-  year      = {2021},
-  publisher = {Elsevier}
+@article{zhang2022multi,
+  title={Multi-Step Ahead Natural Gas Consumption Forecasting Based on a Hybrid Model: Case Studies in The Netherlands and the United Kingdom},
+  author={Zhang, Longfeng and Ma, Xin and Zhang, Hui and Zhang, Gaoxun and Zhang, Peng},
+  journal={Energies},
+  volume={15},
+  number={19},
+  pages={7437},
+  year={2022},
+  publisher={MDPI}
 }
 
-@article{lu2021hybrid,
-  title     = {A hybrid multi-objective optimizer-based model for daily electricity demand prediction considering COVID-19},
-  author    = {Lu, Hongfang and Ma, Xin and Ma, Minda},
-  journal   = {Energy},
-  volume    = {219},
-  pages     = {119568},
-  year      = {2021},
-  publisher = {Pergamon}
+@article{wang2022forecasting,
+  title={Forecasting China's energy production and consumption based on a novel structural adaptive Caputo fractional grey prediction model},
+  author={Wang, Yong and Yang, Zhongsen and Wang, Li and Ma, Xin and Wu, Wenqing and Ye, Lingling and Zhou, Ying and Luo, Yongxian},
+  journal={Energy},
+  volume={259},
+  pages={124935},
+  year={2022},
+  publisher={Pergamon}
 }
 
-@article{wu2020mean,
-  title     = {The mean sensitivity and mean equicontinuity in uniform spaces},
-  author    = {Wu, Xinxing and Liang, Shudi and Ma, Xin and Lu, Tianxiu and Ahmadi, Seyyed Alireza},
-  journal   = {International Journal of Bifurcation and Chaos},
-  volume    = {30},
-  number    = {08},
-  pages     = {2050122},
-  year      = {2020},
-  publisher = {World Scientific Publishing Company}
+@article{wu2022conformable,
+  title={A conformable fractional discrete grey model CFDGM (1, 1) and its application},
+  author={Wu, Wenqing and Ma, Xin and Zhang, Hui and Tian, Xue and Zhang, Gaoxun and Zhang, Peng},
+  journal={International Journal of Grey Systems},
+  volume={2},
+  number={1},
+  pages={5--15},
+  year={2022}
 }
 
-@article{wang2020dynamic,
-  title   = {Dynamic analysis of oil-water two-phase flow for a multiple-fractured horizontal well with multiple finite-conductivity fractures in triple media carbonate reservoir},
-  author  = {Wang, Yong and Tao, Zhengwu and Yang, Kun and Ma, Xin and Tian, Donghong and Feng, Zonghong},
-  journal = {ZAMM-Journal of Applied Mathematics and Mechanics/Zeitschrift f{\"u}r Angewandte Mathematik und Mechanik},
-  volume  = {100},
-  number  = {4},
-  pages   = {e201900046},
-  year    = {2020}
+@article{ma2023urban,
+  title={Urban natural gas consumption forecasting by novel wavelet-kernelized grey system model},
+  author={Ma, Xin and Lu, Hongfang and Ma, Minda and Wu, Lifeng and Cai, Yubin},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={119},
+  pages={105773},
+  year={2023},
+  publisher={Elsevier}
 }
 
-@article{li2021optimization,
-  title   = {Optimization of load sharing for parallel compressors using a novel hybrid intelligent algorithm},
-  author  = {Li, Xia and Cui, Tao and Huang, Kun and Ma, Xin},
-  journal = {Energy Science \& Engineering},
-  volume  = {9},
-  number  = {3},
-  pages   = {330--342},
-  year    = {2021}
+@article{he2022novel,
+  title={A novel structure adaptive new information priority discrete grey prediction model and its application in renewable energy generation forecasting},
+  author={He, Xinbo and Wang, Yong and Zhang, Yuyang and Ma, Xin and Wu, Wenqing and Zhang, Lei},
+  journal={Applied Energy},
+  volume={325},
+  pages={119854},
+  year={2022},
+  publisher={Elsevier}
 }
 
-@article{ma2021novel,
-  title     = {A novel neural grey system model with Bayesian regularization and its applications},
-  author    = {Ma, Xin and Xie, Mei and Suykens, Johan AK},
-  journal   = {Neurocomputing},
-  volume    = {456},
-  pages     = {61--75},
-  year      = {2021},
-  publisher = {Elsevier}
+@article{ma2023partially,
+  title={Partially Linear Component Support Vector Machine for Primary Energy Consumption Forecasting of the Electric Power Sector in the United States},
+  author={Ma, Xin and Cai, Yubin and Yuan, Hong and Deng, Yanqiao},
+  journal={Sustainability},
+  volume={15},
+  number={9},
+  pages={7086},
+  year={2023},
+  publisher={MDPI}
+}
+
+@article{zhao2023application,
+  title={Application of a novel hybrid accumulation grey model to forecast total energy consumption of Southwest Provinces in China},
+  author={Zhao, Xuemei and Ma, Xin and Cai, Yubin and Yuan, Hong and Deng, Yanqiao},
+  journal={Grey Systems: Theory and Application},
+  year={2023},
+  publisher={Emerald Publishing Limited}
 }
