--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -448,6 +448,9 @@
   title={Improved GM (1, 1) model based on concave sequences and its applications},
   author={Kong, Xinhai and Zhang, Peng and Ma, Xin},
   journal={Grey Systems: Theory and Application},
+  volume={7},
+  number={3},
+  pages={343--352},
   year={2017},
   publisher={Emerald Publishing Limited}
 }
@@ -900,7 +903,7 @@
   number={1},
   pages={54},
   year={2022},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={MDPI}
 }
 
 @article{wu2022novel,
@@ -914,7 +917,7 @@
 }
 
 @article{xiang2022python,
-  title={Python-LMDI: a tool for index decomposition analysis of building carbon emissions},
+  title={Python-LMDI: A tool for index decomposition analysis of building carbon emissions},
   author={Xiang, Xiwang and Ma, Xin and Ma, Zhili and Ma, Minda and Cai, Weiguang},
   journal={Buildings},
   volume={12},
@@ -925,7 +928,7 @@
 }
 
 @article{tian2021new,
-  title={A New Information Priority Accumulated Grey Model with Hyperbolic Sinusoidal Term and its Application},
+  title={A new information priority accumulated grey model with hyperbolic sinusoidal term and its application},
   author={Tian, Xue and Wu, Wenqing and Ma, Xin and Zhang, Peng},
   journal={International Journal of Grey Systems},
   volume={1},
@@ -975,12 +978,14 @@
   publisher={Elsevier}
 }
 
-@article{wang2022novel,
+@article{wang2023novel,
   title={A novel exponential time delayed fractional grey model and its application in forecasting oil production and consumption of China},
   author={Wang, Yong and Zhang, Lei and He, Xinbo and Ma, Xin and Wu, Wenqing and Nie, Rui and Chi, Pei and Zhang, Yuyang},
   journal={Cybernetics and Systems},
-  pages={1--29},
-  year={2022},
+  volume={54},
+  number={2},
+  pages={168--196},
+  year={2023},
   publisher={Taylor \& Francis}
 }
 
@@ -1103,4 +1108,82 @@
   journal={Grey Systems: Theory and Application},
   year={2023},
   publisher={Emerald Publishing Limited}
+}
+
+@article{ma2014spin,
+  title={Spin-orbit interaction tuning of perpendicular magnetic anisotropy in L1 FePdPt films},
+  author={Ma, X and He, P and Ma, L and Guo, GY and Zhao, HB and Zhou, SM and L{\"u}pke, G},
+  journal={Applied Physics Letters},
+  volume={104},
+  number={19},
+  year={2014},
+  publisher={AIP Publishing}
+}
+
+@misc{ma2020impact,
+  title={The impact of inspection on the sustainable production strategy: The supply-side environmental violation and abatement},
+  author={Ma, Xin and Fan, Di and Zhou, Yi and Yang, Cheng-Hu},
+  year={2020},
+  publisher={SSRN}
+}
+
+@article{wang2023novel,
+  title={A novel fractional discrete grey model with variable weight buffer operator and its applications in renewable energy prediction},
+  author={Wang, Yong and Chi, Pei and Nie, Rui and Ma, Xin and Wu, Wenqing and Guo, Binghong},
+  journal={Soft Computing},
+  pages={1--25},
+  year={2023},
+  publisher={Springer Berlin Heidelberg Berlin/Heidelberg}
+}
+
+@article{wang2022novel,
+  title={A novel self-adaptive fractional multivariable grey model and its application in forecasting energy production and conversion of China},
+  author={Wang, Yong and Wang, Li and Ye, Lingling and Ma, Xin and Wu, Wenqing and Yang, Zhongsen and He, Xinbo and Zhang, Lei and Zhang, Yuyang and Zhou, Ying and others},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={115},
+  pages={105319},
+  year={2022},
+  publisher={Pergamon}
+}
+
+@article{yu2023fast,
+  title={A fast conjugate functional gain sequential minimal optimization training algorithm for LS-SVM model},
+  author={Yu, Lang and Ma, Xin and Li, Shengjie},
+  journal={Neural Computing and Applications},
+  volume={35},
+  number={8},
+  pages={6095--6113},
+  year={2023},
+  publisher={Springer London London}
+}
+
+@article{wu2022conformable,
+  title={A Conformable Fractional Grey Model CFGM (a, r) and Its Applications in Forecasting Regional Electricity Consumption of China.},
+  author={Wu, Wenqing and Ma, Xin and Zen, Bo and Zhang, Hui and Zhang, Gaoxun},
+  journal={Journal of Grey System},
+  volume={34},
+  number={1},
+  year={2022}
+}
+
+@article{lu2023inventory,
+  title={An inventory of greenhouse gas emissions due to natural gas pipeline incidents in the United States and Canada from 1980s to 2021},
+  author={Lu, Hongfang and Xu, Zhao-Dong and Cheng, Y Frank and Peng, Haoyan and Xi, Dongmin and Jiang, Xinmeng and Ma, Xin and Dai, Jun and Shan, Yuli},
+  journal={Scientific Data},
+  volume={10},
+  number={1},
+  pages={282},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{ma2023forecasting,
+  title={Forecasting the Natural Gas Supply and Consumption in China Using a Novel Grey Wavelet Support Vector Regressor},
+  author={Ma, Xin and Deng, Yanqiao and Yuan, Hong},
+  journal={Systems},
+  volume={11},
+  number={8},
+  pages={428},
+  year={2023},
+  publisher={MDPI}
 }
