--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -1188,3 +1188,12 @@
   publisher={Nature Publishing Group UK London}
 }
 
+
+
+@article{ma2023application,
+  title={Application of a novel quadratic polynomial discrete grey model to forecast energy consumption of China},
+  author={Ma, Xin and Wu, Wenqing and Zhang, Yuanyuan},
+  journal={Scientia Iranica},
+  year={2023},
+  publisher={Sharif University of Technology}
+}
