--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -1195,3 +1195,13 @@
   year={2023},
   publisher={Sharif University of Technology}
 }
+
+@article{ma2024novel,
+  title={A novel kernel ridge grey system model with generalized Morlet wavelet and its application in forecasting natural gas production and consumption},
+  author={Ma, Xin and Deng, Yanqiao and Ma, Minda},
+  journal={Energy},
+  volume={287},
+  pages={129630},
+  year={2024},
+  publisher={Elsevier}
+}
