--- a/publications/maxin.bib
+++ b/publications/maxin.bib
@@ -1205,3 +1205,111 @@
   year={2024},
   publisher={Elsevier}
 }
+
+@article{zheng2023global,
+  title={Global climate policy effectiveness: A panel data analysis},
+  author={Zheng, Saina and Pu, Yanru and Lu, Hongfang and Zhang, Janus Jian and Wang, Dong and Ma, Xin},
+  journal={Journal of Cleaner Production},
+  volume={412},
+  pages={137321},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{yuan2024hybrid,
+  title={Hybrid framework combining grey system model with Gaussian process and STL for CO2 emissions forecasting in developed countries},
+  author={Yuan, Hong and Ma, Xin and Ma, Minda and Ma, Juan},
+  journal={Applied Energy},
+  volume={360},
+  pages={122824},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{yuan2024battery,
+  title={Battery electric vehicle charging in China: Energy demand and emissions trends in the 2020s},
+  author={Yuan, Hong and Ma, Minda and Zhou, Nan and Xie, Hui and Ma, Zhili and Xiang, Xiwang and Ma, Xin},
+  journal={Applied Energy},
+  volume={365},
+  pages={123153},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{he2024nonlinear,
+  title={The nonlinear multi-variable grey Bernoulli model and its applications},
+  author={He, Qingping and Ma, Xin and Zhang, Lanxi and Li, Wanpeng and Li, Tianzi},
+  journal={Applied Mathematical Modelling},
+  volume={134},
+  pages={635--655},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{wu2024conformable,
+  title={A conformable fractional-order grey Bernoulli model with optimized parameters and its application in forecasting Chongqing’s energy consumption},
+  author={Wu, Wenqing and Ma, Xin and Zeng, Bo and Zhang, Yuanyuan},
+  journal={Expert Systems with Applications},
+  volume={255},
+  pages={124534},
+  year={2024},
+  publisher={Pergamon}
+}
+
+@article{zhang2024novel,
+  title={A novel multi-fractional multivariate grey model for city air quality index prediction in China},
+  author={Zhang, Lanxi and Ma, Xin},
+  journal={Expert Systems with Applications},
+  volume={257},
+  pages={125010},
+  year={2024},
+  publisher={Pergamon}
+}
+
+@article{hao2024hybrid,
+  title={A Hybrid Grey System Model Based on Stacked Long Short-Term Memory Layers and Its Application in Energy Consumption Forecasting},
+  author={Hao, Yiwu and Ma, Xin},
+  journal={Processes},
+  volume={12},
+  number={8},
+  pages={1749},
+  year={2024},
+  publisher={MDPI}
+}
+
+@article{deng2024chinas,
+  title={Chinas plug-in hybrid electric vehicle transition: An operational carbon perspective},
+  author={Deng, Yanqiao and Ma, Minda and Zhou, Nan and Ma, Zhili and Yan, Ran and Ma, Xin},
+  journal={Energy Conversion and Management},
+  volume={320},
+  pages={119011},
+  year={2024},
+  publisher={Pergamon}
+}
+
+@article{hao2025residual,
+  title={A residual learning-based grey system model and its applications in Electricity Transformer’s Seasonal oil temperature forecasting},
+  author={Hao, Yiwu and Ma, Xin and Song, Lili and Xiang, Yushu},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={147},
+  pages={110260},
+  year={2025},
+  publisher={Pergamon}
+}
+
+@article{zhang2025novel,
+  title={A novel unbiased multi-variable grey model},
+  author={Zhang, Lanxi and Ma, Xin and He, Qingping and Li, Tianzi},
+  journal={Grey Systems: Theory and Application},
+  year={2025},
+  publisher={Emerald Publishing Limited}
+}
+
+@article{li2025research,
+  title={Research on novel nonlinear Bernoulli grey model with hybrid accumulation and its application in forecasting natural gas production and consumption},
+  author={Li, Tianzi and Ma, Xin and Wu, Wenqing and He, Qingping},
+  journal={Communications in Nonlinear Science and Numerical Simulation},
+  pages={108773},
+  year={2025},
+  publisher={Elsevier}
+}
